--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,9 +17,9 @@ proc-macro = true
 
 [dependencies]
 anyhow = "1.0.28"
-once_cell = "1.3.1"
+once_cell = "1.7.2"
 proc-macro-hack = "0.5.15"
 proc-macro2 = "1.0.10"
 quote = "1.0.3"
-syn = "1.0.18"
+syn = { version = "1.0.18", features = ["full", "visit-mut"] }
 thiserror = "1.0.16"
